[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modular-openrouter-client"
version = "1.0.0"
description = "Universal OpenRouter discovery, rotation and failover client"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27,<1"]

[project.optional-dependencies]
gateway = ["fastapi>=0.111", "uvicorn>=0.30"]
dev = ["pytest>=8"]

[project.scripts]
llm-router-gateway = "llm_router.cli:gateway"

[tool.setuptools.packages.find]
include = ["llm_router*"]
