[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modular-openrouter-client"
version = "2.0.0"
description = "OpenRouter chat gateway with automatic model rotation, failover and built-in web UI."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1",
    "fastapi>=0.115",
    "pydantic>=2.9",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff"]

[tool.setuptools.packages.find]
include = ["llm_router*"]
